bug in frames.css - sorted
The background color has to be the invers because the background-url doesn't cover the whole size, where it doesn't background-color helps.

--- a/docs/dashboard-demo/css/frames.css
+++ b/docs/dashboard-demo/css/frames.css
@@ -15,7 +15,7 @@
 	background-repeat: no-repeat;
 	background-position:center top;
 	border: 2px solid #485274;
-	background-color: black;
+	background-color: white;
 	position:static;
 	margin-top:0px;
 	margin-left:0px;
@@ -32,10 +32,11 @@
 	position:fixed;
 	top:0px;
 	left:0px;
+
 	opacity: 0.9; /* 0.8 - 0.9 when testing, 1 for production */
 	filter: invert(100%); 
 	-webkit-filter: invert(100%); 
  /* ----- inverting the background image of the iframe isn't solved, so the whole thing is invterted ----*/ 
-  /* ----- we then have to invert this div so it inverts back to what it should be ----*/ 
+  /* ----- we then have to invert this div so it inverts back to what it should be. Also make .iframe-mq background color the invers ----*/ 
 	
 }
